--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Welcome - Policies</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
+        .container {
+            background: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.2);
+            text-align: center;
+            max-width: 600px;
+        }
+        h1 {
+            color: #2c3e50;
+            margin-bottom: 20px;
+        }
+        p {
+            margin: 15px 0;
+            font-size: 16px;
+        }
+        a {
+            text-decoration: none;
+            color: #3498db;
+            font-weight: bold;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .footer {
+            margin-top: 20px;
+            font-size: 14px;
+            color: #777;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Welcome to Our App</h1>
+        <p>To know how we handle your data and services, please read our policies below:</p>
+        <p><a href="privacy-policy.html" target="_blank">Privacy Policy</a></p>
+        <p><a href="terms-of-service.html" target="_blank">Terms of Service</a></p>
+        <div class="footer">
+            &copy; 2025 Feradox | Contact: kishandev55@yahoo.com
+        </div>
+    </div>
+</body>
+</html>
